--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -57,7 +57,7 @@
         <div class="modal-body">
           <form name="reserve" action="index.html" method="get" onsubmit="return validate();">
             <div class="formData">
-              <label for="first"></label>Prénom</label><br>
+              <label for="first">Prénom</label><br>
               <input class="text-control" type="text" id="first" name="first" minlength="2" required /><br>
             </div>
             <div class="formData">
