--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="formData">
               <label for="last">Nom</label><br>
-              <input class="text-control" type="text" id="last" name="last" required /><br>
+              <input class="text-control" type="text" id="last" name="last" minlength="2" required /><br>
             </div>
             <div class="formData">
               <label for="email">E-mail</label><br>
@@ -105,7 +105,7 @@
             </div>
 
             <div class="formData">
-              <input class="checkbox-input" type="checkbox" id="checkbox1" required />
+              <input class="checkbox-input" type="checkbox" id="checkbox1" />
               <label class="checkbox2-label" for="checkbox1">
                 <span class="checkbox-icon"></span>
                 J'ai lu et accepté les conditions d'utilisation.
