--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -55,29 +55,29 @@
       <div class="content">
         <span class="close"></span>
         <div class="modal-body">
-          <form name="reserve" action="index.html" method="get" onsubmit="return validate();">
-            <div class="formData">
+          <form novalidate name="reserve" action="index.html" method="get" onsubmit="return validate();">
+            <div class="formData" id="formPrenom">
               <label for="first">Prénom</label><br>
               <input class="text-control" type="text" id="first" name="first" minlength="2" required /><br>
             </div>
-            <div class="formData">
+            <div class="formData" id="formNom">
               <label for="last">Nom</label><br>
               <input class="text-control" type="text" id="last" name="last" minlength="2" required /><br>
             </div>
-            <div class="formData">
+            <div class="formData" id="formEmail">
               <label for="email">E-mail</label><br>
               <input class="text-control" type="email" id="email" name="email" required /><br>
             </div>
-            <div class="formData">
+            <div class="formData" id="formDateNaissance">
               <label for="birthdate">Date de naissance</label><br>
               <input class="text-control" type="date" id="birthdate" name="birthdate" required /><br>
             </div>
-            <div class="formData">
+            <div class="formData" id='formNbParticipations'>
               <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
               <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" required>
             </div>
             <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
-            <div class="formData">
+            <div class="formData" id="formVille">
               <input class="checkbox-input" type="radio" id="location1" name="location" value="New York" />
               <label class="checkbox-label" for="location1">
                 <span class="checkbox-icon"></span>
@@ -104,8 +104,8 @@
                 Portland</label>
             </div>
 
-            <div class="formData">
-              <input class="checkbox-input" type="checkbox" id="checkbox1" />
+            <div class="formData" id="formConditions">
+              <input class=" checkbox-input" type="checkbox" id="checkbox1" />
               <label class="checkbox2-label" for="checkbox1">
                 <span class="checkbox-icon"></span>
                 J'ai lu et accepté les conditions d'utilisation.
