--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="content">
         <span class="close"></span>
         <div class="modal-body">
-          <form novalidate name="reserve" action="index.html" method="get" onsubmit="return validate();">
+          <form novalidate id='form' name="reserve" action="index.html" method="get" onsubmit="return validate();">
             <div class="formData" id="formPrenom">
               <label for="first">Prénom</label><br>
               <input class="text-control" type="text" id="first" name="first" minlength="2" required /><br>
@@ -114,7 +114,7 @@
               <input class="checkbox-input" type="checkbox" id="checkbox2" />
               <label class="checkbox2-label" for="checkbox2">
                 <span class="checkbox-icon"></span>
-                Je Je souhaite être prévenu des prochains évènements.
+                Je souhaite être prévenu des prochains évènements.
               </label>
               <br>
             </div>
